--- a/package.json
+++ b/package.json
@@ -35,10 +35,14 @@
     "postcss-custom-media": "^6.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
+    "precss": "^2.0.0",
     "promise": "8.0.1",
+    "prop-types": "^15.6.0",
+    "query-string": "^5.0.1",
     "react": "^16.0.0",
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
+    "react-paginate": "^5.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "style-loader": "0.18.2",
