--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-paginate": "^5.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
@@ -52,9 +53,6 @@
     "webpack-dev-server": "2.8.2",
     "webpack-manifest-plugin": "1.2.1",
     "whatwg-fetch": "2.0.3"
-  },
-  "devDependencies": {
-    "postcss-loader": "^2.0.6"
   },
   "scripts": {
     "start": "node server.js",
