--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-react-app": "^3.0.3",
     "babel-runtime": "6.26.0",
     "body-parser": "^1.18.2",
+    "btoa": "^1.1.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
