Add .env example for Spotify credentials.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ GOOGLE_CLIENT_EMAIL=*********
 GOOGLE_PRIVATE_KEY=*********
 GOOGLE_BOOKS_USER_ID=*********
 GOOGLE_BOOKS_SHELF=*********
+
+SPOTIFY_CLIENT_ID=*********
+SPOTIFY_CLIENT_SECRET=*********
+SPOTIFY_USER_ID=*********
+SPOTIFY_PLAYLIST_ID=*********
