--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql-tools": "^2.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "mongoose": "^4.13.0",
     "object-assign": "4.1.1",
     "postcss-custom-media": "^6.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -56,6 +57,7 @@
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
+    "uuid": "^3.1.0",
     "webpack": "3.5.1",
     "webpack-dev-server": "2.8.2",
     "webpack-manifest-plugin": "1.2.1",
