Added prettier and .prettierrc

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "precss": "^2.0.0",
+    "prettier": "^1.8.2",
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
     "query-string": "^5.0.1",
