--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "babel-loader": "7.1.1",
     "babel-preset-react-app": "^3.0.3",
     "babel-runtime": "6.26.0",
-    "body-parser": "^1.18.2",
+    "brotli-webpack-plugin": "^0.5.0",
     "btoa": "^1.1.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
+    "compression-webpack-plugin": "^1.1.3",
     "css-loader": "0.28.4",
     "dotenv": "4.0.0",
     "eslint": "4.4.1",
@@ -27,6 +28,7 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
     "express": "^4.16.2",
+    "express-static-gzip": "^0.3.2",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "fs-extra": "3.0.1",
@@ -37,6 +39,7 @@
     "graphql-tools": "^2.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "morgan": "^1.9.0",
     "object-assign": "4.1.1",
     "postcss-custom-media": "^6.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -55,6 +58,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "shrink-ray": "^0.1.3",
     "smoothscroll-polyfill": "^0.4.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -78,5 +82,8 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.6"
   }
 }
