--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chalk": "1.1.3",
     "classnames": "^2.2.5",
     "css-loader": "0.28.4",
+    "debug": "^3.1.0",
     "dotenv": "4.0.0",
     "eslint": "4.4.1",
     "eslint-config-react-app": "^2.0.1",
@@ -36,7 +37,9 @@
     "graphql-tag": "^2.5.0",
     "graphql-tools": "^2.7.2",
     "html-webpack-plugin": "2.29.0",
+    "ioredis": "^3.2.2",
     "jest": "20.0.4",
+    "ms": "^2.1.1",
     "object-assign": "4.1.1",
     "postcss-custom-media": "^6.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -65,18 +68,19 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node server.js",
-    "watch:server": "nodemon server.js",
+    "start": "NODE_ENV=production node server.js",
+    "watch:server": "NODE_ENV=development nodemon server.js",
     "watch:client": "node scripts/start.js",
     "build": "node scripts/build.js"
   },
   "proxy": "http://localhost:3000/",
   "babel": {
-    "presets": [
-      "react-app"
-    ]
+    "presets": ["react-app"]
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.6"
   }
 }
