--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.1.0",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "express-static-gzip": "^0.3.2",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
@@ -44,6 +44,7 @@
     "mongoose": "^5.1.5",
     "morgan": "^1.9.0",
     "ms": "^2.1.1",
+    "nunjucks": "^3.1.3",
     "object-assign": "4.1.1",
     "postcss-custom-media": "^6.0.0",
     "postcss-flexbugs-fixes": "3.2.0",
@@ -65,9 +66,11 @@
     "shrink-ray": "^0.1.3",
     "smoothscroll-polyfill": "^0.4.0",
     "style-loader": "0.18.2",
+    "superagent": "^3.8.3",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
     "uuid": "^3.2.1",
+    "vd": "^0.8.2",
     "webpack": "3.5.1",
     "webpack-dev-server": "2.8.2",
     "webpack-manifest-plugin": "1.2.1",
@@ -89,6 +92,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "dotenv": "^4.0.0",
     "nodemon": "^1.14.6"
   }
 }
